# bevy_web_file_drop

./: Cargo.toml  README.md  Trunk.toml  default.nix  flake.nix
.github/workflows/: ci.yml
example/: Cargo.toml  index.html  style.css
example/src/: lib.rs  main.rs  plugin.rs
src/: drop.js  lib.rs
