[package]
name = "bevy_web_file_drop"
description = "Bevy plugin adding better support for drag and drop files in the web."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = [
  "example"
]

[workspace.package]
version = "0.0.6"
edition = "2021"
repository = "https://github.com/kayhhh/bevy_web_file_drop"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.14.2"
bevy_blob_loader = "0.0.6"
js-sys = "0.3.66"
wasm-bindgen = "0.2.91"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
