[package]
name = "bevy_web_file_drop"
description = "Bevy plugin adding better support for drag and drop files in the web."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.package]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/kayhhh/bevy_web_file_drop"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.17.2"
bevy_blob_loader = "0.2.0"
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
