[package]
name = "bevy_web_file_drop"
description = "Bevy plugin adding better support for drag and drop files in the web."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = ["example"]

[workspace.package]
version = "0.2.2"
edition = "2024"
repository = "https://github.com/kayhhh/bevy_web_file_drop"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
js-sys = "0.3.80"
wasm-bindgen = "0.2.104"

[dependencies]
bevy = "0.17.2"
bevy_blob_loader = "0.2.0"
js-sys.workspace = true
wasm-bindgen.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
