[package]
name = "example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = "0.12.1"
js-sys = "0.3.66"
wasm-bindgen = "0.2.89"
bevy_web_file_drop = { path = ".." }
wasm-bindgen-futures = "0.4.39"
