[package]
name = "example"
publish = false
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
bevy = "0.17.2"
bevy_web_file_drop = { path = ".." }
js-sys.workspace = true
wasm-bindgen-futures = "0.4.53"
wasm-bindgen.workspace = true
